@@ -193,7 +193,7 @@ prefix = os.path.join(os.environ['HOME'], 'prefix')
       <variablelist>
 	<?dbhtml list-presentation="table"?>
 	<varlistentry>
-	  <term><varname><link linkend="cfg-moduleset">moduleset</link></varname></term>
+	  <term><link linkend="cfg-moduleset"><varname>moduleset</varname></link></term>
 	  <listitem>
 	    <simpara>A string or list of strings specifying the name(s) of
 	    the module set(s) to use.  If a module set name is a fully
@@ -204,7 +204,7 @@ prefix = os.path.join(os.environ['HOME'], 'prefix')
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term><varname><link linkend="cfg-modules">modules</link></varname></term>
+	  <term><link linkend="cfg-modules"><varname>modules</varname></link></term>
 	  <listitem>
 	    <simpara>A list of strings giving the modules you want to
 	    build.  The list of modules actually built will be
@@ -213,14 +213,14 @@ prefix = os.path.join(os.environ['HOME'], 'prefix')
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term><varname><link linkend="cfg-checkoutroot">checkoutroot</link></varname></term>
+	  <term><link linkend="cfg-checkoutroot"><varname>checkoutroot</varname></link></term>
 	  <listitem>
 	    <simpara>The base directory where all source modules
 	    are unpacked or checked out of revision control.</simpara>
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term><varname><link linkend="cfg-prefix">prefix</link></varname></term>
+	  <term><link linkend="cfg-prefix"><varname>prefix</varname></link></term>
 	  <listitem>
 	    <simpara>The directory prefix to install modules
 	    to.  You must have write permissions to this directory, or
@@ -236,7 +236,7 @@ prefix = os.path.join(os.environ['HOME'], 'prefix')
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term><varname><link linkend="cfg-skip">skip</link></varname></term>
+	  <term><link linkend="cfg-skip"><varname>skip</varname></link></term>
 	  <listitem>
 	    <simpara>A list of module names to exclude when deciding
 	    what to build.  One use of this variable is to use the
@@ -245,7 +245,7 @@ prefix = os.path.join(os.environ['HOME'], 'prefix')
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term><varname><link linkend="cfg-autogenargs">autogenargs</link></varname></term>
+	  <term><link linkend="cfg-autogenargs"><varname>autogenargs</varname></link></term>
 	  <listitem>
 	    <simpara>A string listing additional arguments to pass
 	    to the <command>autogen.sh</command> or
@@ -253,14 +253,14 @@ prefix = os.path.join(os.environ['HOME'], 'prefix')
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term><varname><link linkend="cfg-makeargs">makeargs</link></varname></term>
+	  <term><link linkend="cfg-makeargs"><varname>makeargs</varname></link></term>
 	  <listitem>
 	    <simpara>A string listing arguments to be pass
 	    to the <command>make</command> command.</simpara>
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term><varname><link linkend="cfg-repos">repos</link></varname></term>
+	  <term><link linkend="cfg-repos"><varname>repos</varname></link></term>
 	  <listitem>
 	    <simpara>By default, JHBuild will check out code from
 	    repositories using an anonymous repository location.  This
@@ -413,10 +413,10 @@ prefix = os.path.join(os.environ['HOME'], 'prefix')
     <title>Buildbot Integration</title>
 
     <para>
-      Coupled with the <link linkend="http://buildbot.net">Buildbot</link>
+      Coupled with the <ulink url="http://buildbot.net">Buildbot</ulink>
       project, JHBuild can also help as a continuous integration tool.  Such a
-      configuration is used by the GNOME project at <link
-      linkend="http://build.gnome.org">build.gnome.org</link>.
+      configuration is used by the GNOME project at <ulink
+      url="http://build.gnome.org">build.gnome.org</ulink>.
     </para>
 
     <section id="buildbot-slave">
