@@ -1,3 +1,7 @@
+2008-12-26  Frederic Peters  <fpeters@0d.be>
+
+	* C/jhbuild.xml: Docbook validaty fixes.
+
 2008-12-25  Frederic Peters  <fpeters@0d.be>
 
 	* C/jhbuild.xml: added a section on buildbot integration.
